--- a/ phukien/GiaPhuc/Admin/AdminSite.Master
+++ b/ phukien/GiaPhuc/Admin/AdminSite.Master
@@ -5,24 +5,20 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head id="Head1" runat="server">
     <title>Portal Administration</title>
-    <link href="/static/css/Site.css" rel="stylesheet" type="text/css" />
-    <link href="/static/css/ExpressMenu.css" rel="stylesheet" type="text/css" />
+    <link href="/static/css/AdminSite.css" rel="stylesheet" type="text/css" />
     <link href="/third-party/jtable/themes/lightcolor/green/jtable.min.css" rel="stylesheet"
         type="text/css" />
     <link href="/third-party/jtable/themes-ext/highlight.css" rel="stylesheet" type="text/css" />
     <link href="/third-party/jtable/themes-ext/themes/metroblue/jquery-ui.css" rel="stylesheet"
         type="text/css" />
-
     <script src="/Scripts/jquery-1.9.0.min.js" type="text/javascript"></script>
     <script src="/Scripts/jquery-ui-1.10.0.min.js" type="text/javascript"></script>
     <script src="/third-party/jtable/jquery.jtable.min.js" type="text/javascript"></script>
     <script src="/third-party/jtable/extensions/jquery.jtable.aspnetpagemethods.min.js"
         type="text/javascript"></script>
     <script src="/Scripts/knockout-2.2.1.js" type="text/javascript"></script>
-
     <asp:ContentPlaceHolder ID="HeadContent" runat="server">
     </asp:ContentPlaceHolder>
-
     <script type="text/javascript">
         $(document).ready(function () {
             $(".menu li").hover(function () {
@@ -62,7 +58,6 @@
             });
         });
     </script>
-
 </head>
 <body>
     <form id="Form1" runat="server">
@@ -80,7 +75,8 @@
             <div class="loginDisplay">
                 <asp:LoginView ID="HeadLoginView" runat="server" EnableViewState="false">
                     <AnonymousTemplate>
-                        [ <a target="_blank" href="/Admin/Login.aspx" id="HeadLoginStatus" runat="server">Log In</a> ]
+                        [ <a target="_blank" href="/Admin/Login.aspx" id="HeadLoginStatus" runat="server">Log
+                            In</a> ]
                     </AnonymousTemplate>
                     <LoggedInTemplate>
                         Welcome <span class="bold">
@@ -98,20 +94,21 @@
                     <li><a target="_blank" href="/"><span>Meta & Content</span></a>
                         <ul class="children">
                             <li><a target="_blank" href="/Admin/Pages/MetaEntry.aspx">Meta</a></li>
-                            <li><a target="_blank" href="/Admin/Pages/TopicManager.aspx">Content</a></li>
+                            <li><a target="_blank" href="/Admin/Pages/PageManager.aspx">Trang</a></li>
+                            <li><a target="_blank" href="/Admin/Pages/PostManager.aspx">Bài viết</a></li>
                         </ul>
                     </li>
                     <li><a target="_blank" href="#"><span>Product</span></a>
                         <ul class="children">
-                            <li><a target="_blank" href="/Admin/Pages/CategoryManager.aspx">Category</a></li>
+                            <li><a target="_blank" href="/Admin/Pages/CategoryManager.aspx">Nhóm sản phẩm</a></li>
                             <li><a target="_blank" href="/Admin/Pages/ManufacturerManager.aspx">Manufacturer</a></li>
-                            <li><a target="_blank" href="/Admin/Pages/ProductManager.aspx">Product</a></li>
+                            <li><a target="_blank" href="/Admin/Pages/ProductManager.aspx">Sản phẩm</a></li>
                         </ul>
                     </li>
                     <li><a target="_blank" href="/"><span>Order</span></a>
                         <ul class="children">
-                            <li><a target="_blank" href="#">Customer</a></li>
-                            <li><a target="_blank" href="/Admin/Pages/ProductManager.aspx">Order</a></li>
+                            <li><a target="_blank" href="#">Khách hàng</a></li>
+                            <li><a target="_blank" href="/Admin/Pages/ProductManager.aspx">Đơn hàng</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -126,14 +123,14 @@
         </div>
         <div class="footer">
             <p>
-                © 2012 Rs - <a target="_blank" href="http://diembanhang.com">diembanhang.com</a>. Add: 363/29/12/16
-                ĐẤT MỚI, P BTDA, Q BÌNH TÂN - Mobi: (0907) 02 88 02 - Email: huutai.alz@gmail.com.
+                © 2012 Rs - <a target="_blank" href="http://diembanhang.com">diembanhang.com</a>.
+                Add: 363/29/12/16 ĐẤT MỚI, P BTDA, Q BÌNH TÂN - Mobi: (0907) 02 88 02 - Email: huutai.alz@gmail.com.
             </p>
         </div>
         <div>
             <p>
-                <a target="_blank" href="http://phukienipadx.com">Phụ kiện Ipad</a> | <a target="_blank" href="http://simsovn.net">Sim
-                    số Vietnam</a>
+                <a target="_blank" href="http://phukienipadx.com">Phụ kiện Ipad</a> | <a target="_blank"
+                    href="http://simsovn.net">Sim số Vietnam</a>
             </p>
             <p class="back-top">
                 <a><span></span></a>
