--- a/ phukien/GiaPhuc/Site.Master
+++ b/ phukien/GiaPhuc/Site.Master
@@ -43,7 +43,7 @@
     <link href="/static/response/col.css" rel="stylesheet" type="text/css" />
     <link href="static/css/menu/skins/black.css" rel="stylesheet" type="text/css" />
     <link href="/static/css/slider/slider.css" rel="stylesheet" type="text/css" />
-    <link href="/static/css/menu/dcverticalmegamenu.css" rel="stylesheet" type="text/css" />
+    <%--<link href="/static/css/menu/dcverticalmegamenu.css" rel="stylesheet" type="text/css" />--%>
     <script src="/Scripts/jquery-1.9.0.min.js" type="text/javascript"></script>
     <script src="/Scripts/jquery-scrolltofixed-min.js" type="text/javascript"></script>
     <script src="/Scripts/menu/jquery.hoverIntent.minified.js" type="text/javascript"></script>
@@ -123,15 +123,15 @@
             return index + "";
         }
 
-        (function (i, s, o, g, r, a, m) {
-            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-                (i[r].q = i[r].q || []).push(arguments)
-            }, i[r].l = 1 * new Date(); a = s.createElement(o),
-		  m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+                (function (i, s, o, g, r, a, m) {
+                    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                        (i[r].q = i[r].q || []).push(arguments)
+                    }, i[r].l = 1 * new Date(); a = s.createElement(o),
+        		  m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+                })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-        ga('create', 'UA-41392819-1', 'phukienipadx.com');
-        ga('send', 'pageview');
+                ga('create', 'UA-41392819-1', 'phukienipadx.com');
+                ga('send', 'pageview');
     
     </script>
     <asp:ContentPlaceHolder ID="HeadContent" runat="server">
@@ -157,13 +157,13 @@
             </div>
         </div>
         <div class="section group" style="margin: 0 10px 0 0;">
-            <div class="col span_1_of_4">
+            <div class="col span_1_of_5">
                 <asp:PlaceHolder ID="pnlMenu1" runat="server"></asp:PlaceHolder>
                 <div style="margin-left: 10px;">
                     <uc:LeftLayout ID="LeftLayout" runat="server" />
                 </div>
             </div>
-            <div class="col span_3_of_4">
+            <div class="col span_4_of_5">
                 <div id="siteMapPath" style="line-height: 35px">
                     <asp:SiteMapPath ID="SiteMapPath1" runat="server" PathSeparator="::">
                     </asp:SiteMapPath>
