--- a/trunk/ phukien/GiaPhuc/Site.Master
+++ b/trunk/ phukien/GiaPhuc/Site.Master
@@ -18,8 +18,8 @@
     <meta name="Language" content="vietnamese" />
     <meta http-equiv="Content-Language" content="vi" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <meta name="keywords" content="bao da, bao da ipad, bao da samsung, ban phim ipad, ban phim samsung, baoda galaxy, pin du phong, pin yoobao, phukienipadx" />
-    <meta name="description" content="Bao da, bao da ipad, pin dự phòng, pin yoobao, phụ kiện iPad, bàn phím Bluetooth, ốp lưng iPhone; giao hàng tận nơi, giá tốt nhất" />
+    <meta name="keywords" content="bao da, bao da ipad, bao da ipad air, retina, bao da samsung, ban phim ipad, ban phim samsung, baoda galaxy, pin du phong, pin yoobao, phukienipadx" />
+    <meta name="description" content="Bao da, bao da ipad, bao da ipad air, retina, pin dự phòng, pin yoobao, phụ kiện iPad, bàn phím Bluetooth, ốp lưng iPhone; giao hàng tận nơi, giá tốt nhất" />
     <%--. Giao hàng tận nơi, giá tốt nhất. ĐT: 0903.71.20.70 (Mr.Đạt)--%>
     <meta name="robots" content="index, follow" />
     <meta name="msvalidate.01" content="914CB68D9763F8228C191DB5DD29E567" />
@@ -43,13 +43,10 @@
     <link href="/static/response/col.css" rel="stylesheet" type="text/css" />
     <link href="static/css/menu/skins/black.css" rel="stylesheet" type="text/css" />
     <link href="/static/css/slider/slider.css" rel="stylesheet" type="text/css" />
-    <%--<link href="/static/css/menu/dcverticalmegamenu.css" rel="stylesheet" type="text/css" />--%>
     <script src="/Scripts/jquery-1.9.0.min.js" type="text/javascript"></script>
     <script src="/Scripts/jquery-scrolltofixed-min.js" type="text/javascript"></script>
     <script src="/Scripts/menu/jquery.hoverIntent.minified.js" type="text/javascript"></script>
     <script src="/Scripts/menu/jquery.dcmegamenu.1.3.3.min.js" type="text/javascript"></script>
-    <%--<script src="/Scripts/menu/jquery.dcverticalmegamenu.1.3.js" type="text/javascript"></script>
-    <script src="/Scripts/slider/jquery.carouFredSel-6.2.1-packed.js" type="text/javascript"></script>--%>
     <script src="/Scripts/jquery.lazy.min.js" type="text/javascript"></script>
     <script type="text/javascript">
         $(document).ready(function ($) {
