--- a/trunk/ phukien/GiaPhuc/Site.Master
+++ b/trunk/ phukien/GiaPhuc/Site.Master
@@ -24,7 +24,8 @@
     <meta name="robots" content="index, follow" />
     <meta name="msvalidate.01" content="914CB68D9763F8228C191DB5DD29E567" />
     <link href="/static/css/dropdown-menu.css" rel="stylesheet" type="text/css" />
-    <link href="/static/css/Site.css" rel="stylesheet" type="text/css" />
+    <link href="/static/css/site.min.css" rel="stylesheet" type="text/css" />
+    <link href="/static/css/christmas.css" rel="stylesheet" type="text/css" />
     <link href="/static/css/productstyle.css" rel="stylesheet" type="text/css" />
     <link href="/static/response/1024.css" rel="stylesheet" type="text/css" />
     <link href="/static/response/10cols.css" rel="stylesheet" type="text/css" />
@@ -48,6 +49,7 @@
     <script src="/Scripts/menu/jquery.hoverIntent.minified.js" type="text/javascript"></script>
     <script src="/Scripts/menu/jquery.dcmegamenu.1.3.3.min.js" type="text/javascript"></script>
     <script src="/Scripts/jquery.lazy.min.js" type="text/javascript"></script>
+    <script src="/Scripts/kenburns.min.js" type="text/javascript"></script>
     <script type="text/javascript">
         $(document).ready(function ($) {
             $(".water").each(function () {
@@ -114,21 +116,43 @@
             //                pagination: "#foo2_pag"
             //            });
 
+
+            $('#kenburns-slideshow').Kenburns({
+                images: [
+	    		"/images/highlight-products/image0.jpg",
+	    		"/images/highlight-products/image1.jpg",
+	    		"/images/highlight-products/image2.jpg",
+	    		"/images/highlight-products/image3.jpg",
+	    		"/images/highlight-products/image4.jpg",
+	    		"/images/highlight-products/image5.jpg"
+	    	    ],
+                scale: 0.75,
+                duration: 8000,
+                fadeSpeed: 1200,
+                ease3d: 'cubic-bezier(0.445, 0.050, 0.550, 0.950)',
+
+                onSlideComplete: function () {
+                },
+                onLoadingComplete: function () {
+                }
+
+            });
+
         });
 
         function formatText(index, panel) {
             return index + "";
         }
 
-                (function (i, s, o, g, r, a, m) {
-                    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-                        (i[r].q = i[r].q || []).push(arguments)
-                    }, i[r].l = 1 * new Date(); a = s.createElement(o),
+        (function (i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
         		  m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-                })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
+        })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-                ga('create', 'UA-41392819-1', 'phukienipadx.com');
-                ga('send', 'pageview');
+        ga('create', 'UA-41392819-1', 'phukienipadx.com');
+        ga('send', 'pageview');
     
     </script>
     <asp:ContentPlaceHolder ID="HeadContent" runat="server">
@@ -138,7 +162,6 @@
     <form runat="server" submitdisabledcontrols="true">
     <uc:OnTop ID="OnTop1" runat="server"></uc:OnTop>
     <div id="header">
-        <%--<uc:Advertise ID="Advertise1" runat="server"></uc:Advertise>--%>
         <uc:Header ID="PageHeader1" runat="server"></uc:Header>
         <uc:TopMenu ID="TopMenu1" runat="server"></uc:TopMenu>
     </div>
