--- a/trunk/ phukien/GiaPhuc/Site.Master
+++ b/trunk/ phukien/GiaPhuc/Site.Master
@@ -50,100 +50,9 @@
     <script src="/Scripts/menu/jquery.dcmegamenu.1.3.3.min.js" type="text/javascript"></script>
     <script src="/Scripts/jquery.lazy.min.js" type="text/javascript"></script>
     <script src="/Scripts/kenburns.min.js" type="text/javascript"></script>
+    <script src="/Scripts/ipadx.min.js" type="text/javascript"></script>
     <script type="text/javascript">
-        $(document).ready(function ($) {
-            $(".water").each(function () {
-                var tb = $(this);
-                if (tb.val() != this.title) {
-                    tb.removeClass("water");
-                }
-            });
-
-            $(".water").focus(function () {
-                var tb = $(this);
-                if (tb.val() == this.title) {
-                    tb.val("");
-                    tb.removeClass("water");
-                }
-            });
-
-            $(".water").blur(function () {
-                var tb = $(this);
-                if ($.trim(tb.val()) == "") {
-                    tb.val(this.title);
-                    tb.addClass("water");
-                }
-            });
-
-            jQuery("img").lazy();
-
-            $('#hor-menu').dcMegaMenu({
-                rowItems: '5',
-                speed: 'fast',
-                effect: 'fade',
-                event: 'click',
-                fullWidth: true
-            });
-
-            //            $('#vertical-menu').dcVerticalMegaMenu({
-            //                rowItems: '3',
-            //                speed: 'fast',
-            //                effect: 'fade',
-            //                direction: 'right'
-            //            });
-
-            //            $('#highlight-product').scrollToFixed({ marginTop: 10,
-            //                limit: $('#footer').offset().top,
-            //                zIndex: 9
-            //            });
-
-            $('#social-icons').scrollToFixed({ marginTop: 10,
-                zIndex: 99
-            });
-
-            //            $("#foo2").carouFredSel({
-            //                circular: false,
-            //                infinite: false,
-            //                auto: false,
-            //                prev: {
-            //                    button: "#foo2_prev",
-            //                    key: "left"
-            //                },
-            //                next: {
-            //                    button: "#foo2_next",
-            //                    key: "right"
-            //                },
-            //                pagination: "#foo2_pag"
-            //            });
-
-
-            $('#kenburns-slideshow').Kenburns({
-                images: [
-	    		"/images/highlight-products/image0.jpg",
-	    		"/images/highlight-products/image1.jpg",
-	    		"/images/highlight-products/image2.jpg",
-	    		"/images/highlight-products/image3.jpg",
-	    		"/images/highlight-products/image4.jpg",
-	    		"/images/highlight-products/image5.jpg"
-	    	    ],
-                scale: 0.75,
-                duration: 8000,
-                fadeSpeed: 1200,
-                ease3d: 'cubic-bezier(0.445, 0.050, 0.550, 0.950)',
-
-                onSlideComplete: function () {
-                },
-                onLoadingComplete: function () {
-                }
-
-            });
-
-        });
-
-        function formatText(index, panel) {
-            return index + "";
-        }
-
+        
         (function (i, s, o, g, r, a, m) {
             i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
                 (i[r].q = i[r].q || []).push(arguments)
@@ -201,34 +110,6 @@
     </div>
     <div class="wrapper">
         <uc:Footer ID="Footer1" runat="server"></uc:Footer>
-        <%--<div class="footer">
-            <div class="float-left" style="width: 40%">
-                <uc:Location ID="Location1" runat="server" />
-            </div>
-            <div class="float-left" style="width: 56%; margin: 10px;">
-                <div>
-                    © 2013 Bản quyền <a href="http://phukienipadx.com">phukienipadx.com</a> thuộc về
-                    <b>CỬA HÀNG TINH TẾ (NICE STORE)</b>.</div>
-                <p>
-                    <a href="<%="/Default.aspx?CategoryID=1".ParseSimpleUrl("Pin du phong") %>" title="Phu kien ipad, Pin du phong">
-                        Pin dự phòng</a>,<a href="<%="/Default.aspx?CategoryID=2".ParseSimpleUrl("Bluetooth keyboard") %>"
-                            title="Bluetooth keyboard">Bluetooth keyboard </a>,<a href="<%="/Default.aspx?CategoryID=3".ParseSimpleUrl("Loa bluetooth") %>"
-                                title="Loa bluetooth">Loa bluetooth </a>,<a href="<%="/Default.aspx?CategoryID=4".ParseSimpleUrl("Bao da IPad") %>"
-                                    title="Bao da IPad"> Bao da Ipad </a>,<a href="<%="/Default.aspx?CategoryID=5".ParseSimpleUrl("Case IPhone") %>"
-                                        title="Case IPhone"> Case Iphone </a>,<a href="<%="/Default.aspx?CategoryID=6".ParseSimpleUrl("Cap tai nghe sac IPhone") %>"
-                                            title="Cap tai nghe sac IPhone">Cáp, Tai Nghe và Sạc Iphone
-                    </a>,<a href="<%="/Default.aspx?CategoryID=7".ParseSimpleUrl("Thiet bi mang") %>"
-                        title="Cap tai nghe sac IPhone">Thiết bị mạng</a>,<a href="<%="/Default.aspx?CategoryID=8".ParseSimpleUrl("Samsung galaxy Tab") %>"
-                            title="Cap tai nghe sac IPhone">Samsung</a>,<a href="http://htsofts.com" title="phần mềm hay">Dịch
-                                vụ phần mềm hay</a>,<a href="http://simsovn.net" title="sim đẹp">Sim số đẹp</a>,<a
-                                    href="http://24h.com.vn" title="tin thể thao">Tin thể thao</a>,<a href="http://thanhnien.com.vn"
-                                        title="báo thanh niên">Báo Thanh Niên</a>,<a href="http://pcworld.com.vn" title="tin công nghệ">Tin
-                                            công nghệ</a>
-                </p>
-            </div>
-            <div class="clear">
-            </div>
-        </div>--%>
     </div>
     </form>
 </body>
