--- a/ phukien/GiaPhuc/static/css/menu/skins/black.css
+++ b/ phukien/GiaPhuc/static/css/menu/skins/black.css
@@ -6,12 +6,12 @@
 
 .black {font: normal 13px Arial, sans-serif; line-height: 16px;}
 .black ul.mega-menu, .black ul.mega-menu, .black ul.mega-menu li {margin: 0; padding: 0; border: none;}
-.black ul.mega-menu {background: #222 url(images/bg_black.png) repeat-x 0 -80px; width: 100%; height: 40px; border-right: 1px solid #1B1B1B; border-left: 1px solid #1B1B1B; position: relative;}
+.black ul.mega-menu {background: #222 repeat-x 0 -80px; width: 100%; height: 40px; border-right: 1px solid #1B1B1B; border-left: 1px solid #1B1B1B; position: relative;}
 .black ul.mega-menu li {float: left; margin: 0; padding: 0; font-size: 13px; font-weight: bold;}
-.black ul.mega-menu li a {float: left; display: block; color: #fff; padding: 12px 25px 12px 25px; background: url(images/bg_black.png) repeat-x 100% 0; text-shadow: 1px 1px 1px #000; text-decoration: none;}
+.black ul.mega-menu li a {float: left; display: block; color: #fff; padding: 12px 25px 12px 25px; text-shadow: 1px 1px 1px #000; text-decoration: none;}
 .black ul.mega-menu li a.dc-mega {position: relative;}
 .black ul.mega-menu li a .dc-mega-icon {display: block; position: absolute; top: 18px; right: 15px; width: 8px; height: 6px; background: url(images/arrow.png) no-repeat 0 0;}
-.black ul.mega-menu li.mega-hover a, .black ul.mega-menu li a:hover {background: #fff; color: #000; opacity: 0.2; text-shadow: none;}
+.black ul.mega-menu li.mega-hover a, .black ul.mega-menu li a:hover {background: #fff; color: #000; opacity: 0.5; text-shadow: none;}
 .black ul.mega-menu li.mega-hover a .dc-mega-icon {background-position: 0 100%;}
 .black ul.mega-menu li .sub-container {position: absolute; background: url(images/bg_sub_left.png) no-repeat 0 100%; padding-left: 20px; margin-left: -3px;}
 .black ul.mega-menu li .sub {background: url(images/bg_sub.png) no-repeat 100% 100%; padding: 20px 20px 20px 10px;}
