--- a/ phukien/GiaPhuc/static/css/Site.css
+++ b/ phukien/GiaPhuc/static/css/Site.css
@@ -69,8 +69,7 @@ div.clear
 
 h1, h2, h3, h4, h5, h6
 {
-    font-size: 1.1em;
-    /*color: #666666;*/
+    font-size: 1.1em; /*color: #666666;*/
     margin-bottom: 0px;
 }
 
@@ -393,8 +392,7 @@ input.button, a.button
     display: inline-block;
     text-decoration: none;
     cursor: pointer;
-    background: red;
-   /* background: url('../images/button-bg.png') 0 bottom repeat-x #023b2c;*/
+    background: red; /* background: url('../images/button-bg.png') 0 bottom repeat-x #023b2c;*/
     font-size: 12pt;
     text-transform: uppercase;
     line-height: normal;
@@ -1402,8 +1400,38 @@ div#header .page-header .wrapper .search-item div
     text-align: justify;
 }
 
-.advertise 
+.advertise
 {
     margin-bottom: 10px;
     border: 1px solid #ededed;
+}
+/* On top address */
+#divAddress
+{
+    height: 38px;
+    overflow: hidden;
+}
+.onTop
+{
+    height: 38px;
+    border-bottom: 1px solid #ddd;
+    background: #fefefe;
+    background: -moz-linear-gradient(top, #fefefe 0%, #ececec 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #fefefe), color-stop(100%, #ececec));
+    background: -webkit-linear-gradient(top, #fefefe 0%, #ececec 100%);
+    background: -o-linear-gradient(top, #fefefe 0%, #ececec 100%);
+    background: -ms-linear-gradient(top, #fefefe 0%, #ececec 100%);
+    background: linear-gradient(top, #fefefe 0%, #ececec 100%);
+}
+.onTop div
+{
+    float: left;
+}
+.onTop p
+{
+    line-height: 38px;
+}
+#cssmenu
+{
+    float: right;
 }
